Describe what you changed

--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
 </head>
 <body>
   <header>
-    <h1>Hello, I'm [Your Name]</h1>
-    <p>I'm a game developer — Unity, OpenGL, and more!</p>
+    <header>
+      <div class="header-left">
+        <h1>Your Name</h1>
+      </div>
+      <div class="header-right">
+        <a href="https://linkedin.com/in/yourlinkedin" target="_blank" class="header-button">LinkedIn</a>
+        <a href="https://github.com/yourgithub" target="_blank" class="header-button">GitHub</a>
+      </div>
+    </header>
   </header>
 
   <section>
