main page layout

--- a/index.html
+++ b/index.html
@@ -7,25 +7,45 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
+  <header>  
     <header>
       <div class="header-left">
-        <h1>Your Name</h1>
+        <h1>Andrei Dumitru</h1>
       </div>
       <div class="header-right">
-        <a href="https://linkedin.com/in/yourlinkedin" target="_blank" class="header-button">LinkedIn</a>
-        <a href="https://github.com/yourgithub" target="_blank" class="header-button">GitHub</a>
+        <a href="https://www.linkedin.com/in/andrei-dumitru-637979271/" target="_blank" class="header-button">LinkedIn</a>
+        <a href="https://github.com/dumiswa" target="_blank" class="header-button">GitHub</a>
       </div>
     </header>
   </header>
 
-  <section>
+  <!-- About Me Section -->
+  <section id="about-me">
+    <h2>About Me</h2>
+    <div class="about-container">
+      <img src="your-image.jpg" alt="Your Name" class="profile-image">
+      <p>Hello! My name is Andrei Dumitru, and I am a passionate Game Developer. I specialize in creating immersive gaming experiences and love working on innovative projects that push the boundaries of technology and creativity.</p>
+    </div>
+  </section>
+
+  <!-- Projects Section -->
+  <section id="projects">
     <h2>Projects</h2>
-    <p>Coming soon!</p>
+    <div class="projects-grid">
+      <div class="project-card">
+        <h3>Project 1</h3>
+        <p>Description of Project 1.</p>
+      </div>
+      <div class="project-card">
+        <h3>Project 2</h3>
+        <p>Description of Project 2.</p>
+      </div>
+      <!-- Add more project cards as needed -->
+    </div>
   </section>
 
   <footer>
-    <p>© 2025 Your Name</p>
+    <p>© 2025 Andrei Dumitru</p>
   </footer>
 </body>
 </html>
