Added image project cards and color scheme

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
           <h1>Andrei Dumitru</h1>
         </div>
         <div class="header-right">
-          <a href="https://linkedin..." target="_blank" class="header-button">
+          <a href="https://www.linkedin.com/in/andrei-dumitru-637979271/" target="_blank" class="header-button">
             <i class="fab fa-linkedin"></i>
           </a>
-          <a href="https://github.com..." target="_blank" class="header-button">
+          <a href="https://github.com/dumiswa" target="_blank" class="header-button">
             <i class="fab fa-github"></i>
           </a>
         </div>
