--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script src="scripts/fadeIn.js"></script>
+    <script src="scripts/projectPanel.js"></script>
   </head>
   
+
   <body>
     <header> 
       <div class="container header-container">
@@ -29,6 +31,7 @@
       </div>
     </header>
     
+
     <div class="container">
       <!-- About Me Section -->
       <section id="about-me">
@@ -38,6 +41,7 @@
         </div>
       </section>
     </div>
+
 
     <section id="projects">
       <div class="container">
@@ -87,7 +91,16 @@
         </div>
       
       </div>     
+
+      <div id="project-panel">
+        <button id="go-back-btn">← Go back</button>
+        <div class="project-details">
+          <h2 id="project-title">Project Title</h2>
+          <p id="project-description">Full description of the project goes here.</p>
+        </div>
+      </div>
     </section>
+
 
     <section id="skills">
       <div class="skills-container">
@@ -105,6 +118,7 @@
         </div>
       </div>
     </section>
+
 
     <section id="education">
       <div class="skills-container">
