--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   
 
   <body>
+    <div id="page-fade"></div>
     <header> 
       <div class="container header-container">
         <div class="header-left">
@@ -113,6 +114,7 @@
           <span class="skill-badge">Java</span>
           <span class="skill-badge">HTML</span>
           <span class="skill-badge">CSS</span>
+          <span class="skill-badge">JavaScript</span>
           <span class="skill-badge">Git</span>
           <!-- Add more as needed -->
         </div>
@@ -139,4 +141,6 @@
       <p>© 2025 Andrei Dumitru</p>
     </div>
   </footer>
+
+  <script src="scripts/fadeIn.js"></script>
 </body>
