--- a/index.html
+++ b/index.html
@@ -76,23 +76,22 @@
             <img src="images/IceAge.png" alt="Project 1 Thumbnail">
             <h3 class="visually-hidden">Project 1</h3>
 
-            <div class="card-title-overlay">Project 1</div>
-
             <div class="project-meta">
               <div class="meta-item">
                 <i class="fas fa-users"></i>
-                <span>1</span>
+                <span>7</span>
               </div>
               <div class="meta-item">
                 <i class="fas fa-clock"></i>
-                <span>6 weeks</span>
+                <span>8 weeks</span>
               </div>
               <div class="meta-item">
                 <i class="fas fa-screwdriver-wrench"></i>
-                <span>SDL 2 (C++)</span>
+                <span>Unity (C#)</span>
               </div>
             </div>
           </div>
+
           <div class="project-description">
             <h4>IceAge</h4>
             <p>A Unity-based 3D puzzle game created in close collaboration with an after-school care agency, featuring handcrafted levels, modular architecture, and gameplay systems built with C# and custom tools.</p>
@@ -103,6 +102,22 @@
           <div class="project-card" data-project-url="project2.html">
             <img src="Images/GLSLShader.gif" alt="Project 2 Preview">
             <h3 class="visually-hidden">Project 2</h3>
+
+            <div class="project-meta">
+              <div class="meta-item">
+                <i class="fas fa-users"></i>
+                <span>1</span>
+              </div>
+              <div class="meta-item">
+                <i class="fas fa-clock"></i>
+                <span>2 weeks</span>
+              </div>
+              <div class="meta-item">
+                <i class="fas fa-screwdriver-wrench"></i>
+                <span>OpenGL</span>
+              </div>
+            </div>
+
           </div>
           <div class="project-description">
             <h4>GLSL Shader</h4>
@@ -114,6 +129,22 @@
           <div class="project-card" data-project-url="project4.html">
           <img src="Images/TowerDefense.png" alt="Project 3 Preview">
           <h3 class="visually-hidden">Project 3</h3>
+
+          <div class="project-meta">
+              <div class="meta-item">
+                <i class="fas fa-users"></i>
+                <span>1</span>
+              </div>
+              <div class="meta-item">
+                <i class="fas fa-clock"></i>
+                <span>4 weeks</span>
+              </div>
+              <div class="meta-item">
+                <i class="fas fa-screwdriver-wrench"></i>
+                <span>Unity (C#)</span>
+              </div>
+            </div>
+
           </div>
           <div class="project-description">
             <h4>Tower Defense</h4>
@@ -125,6 +156,22 @@
           <div class="project-card" data-project-url="project3.html">
              <img src="Images/3DRendering.png" alt="Project 4 Preview">
              <h3 class="visually-hidden">Project 4</h3>
+
+            <div class="project-meta">
+              <div class="meta-item">
+                <i class="fas fa-users"></i>
+                <span>1</span>
+              </div>
+              <div class="meta-item">
+                <i class="fas fa-clock"></i>
+                <span>4 weeks</span>
+              </div>
+              <div class="meta-item">
+                <i class="fas fa-screwdriver-wrench"></i>
+                <span>OpenGL</span>
+              </div>
+            </div>
+
           </div>
           <div class="project-description">
             <h4>3D Rendering</h4>
@@ -135,6 +182,22 @@
           <div class="project-wrapper">
           <div class="project-card" data-project-url="project3.html">
              <img src="Images/TurnBasedGame.png" alt="Project 5 Preview">
+
+            <div class="project-meta">
+              <div class="meta-item">
+                <i class="fas fa-users"></i>
+                <span>1</span>
+              </div>
+              <div class="meta-item">
+                <i class="fas fa-clock"></i>
+                <span>3 weeks</span>
+              </div>
+              <div class="meta-item">
+                <i class="fas fa-screwdriver-wrench"></i>
+                <span>SFML (C++)</span>
+              </div>
+            </div>
+
           </div>
           <div class="project-description">
             <h4>Turn Based Game</h4>
