small mistake in index

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <div class="project-wrapper">
           <div class="project-card" data-project-url="project1.html">
-            <img src="images/IceAge.png" alt="Project 1 Thumbnail">
+            <img src="Images/IceAge.png" alt="Project 1 Thumbnail">
             <h3 class="visually-hidden">Project 1</h3>
 
             <div class="project-meta">
