--- a/Projects/project2.html
+++ b/Projects/project2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>IceAge - Project Showcase</title>
+  <title>GLSL Shaders - Project Showcase</title>
   <link rel="stylesheet" href="project1.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -24,7 +24,7 @@
             <source src="../Images/GLSLShader.mp4" type="video/mp4"/>
           </video>
         </div>
-        <h1>IceAge</h1>
+        <h1>GLSL Shader</h1>
       </div>
 
       <div class="info-section-wrapper">
