--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         <div class="project-wrapper">
           <div class="project-card" data-project-url="project4.html">
-          <img src="Images/TowerDefense.png" alt="Project 3 Preview">
+          <img src="Images/TowerDefenseLogo.png" alt="Project 3 Preview">
           <h3 class="visually-hidden">Project 3</h3>
 
           <div class="project-meta">
@@ -150,7 +150,7 @@
             <h4>Tower Defense</h4>
             <p>Unity-based tower defense game demonstrating software architecture principles including singleton patterns, event-driven UI and logic handling, modular component design, and ScriptableObject-driven configuration .</p>
           </div>
-        </div>
+        </div> 
 
         <div class="project-wrapper">
           <div class="project-card" data-project-url="project3.html">
