--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
           <h1>Andrei Dumitru</h1>
         </div>
         <div class="header-right">
+          <a href="assets/CV_AndreiDumitru.pdf" download class="header-button" title="Download CV">
+            <i class="fas fa-file-download"></i>
+          </a>
           <a href="https://www.linkedin.com/in/andrei-dumitru-637979271/" target="_blank" class="header-button">
             <i class="fab fa-linkedin"></i>
           </a>
